fixed clipping issue on widget-header

--- a/dash_frontend/src/styles/globals.css
+++ b/dash_frontend/src/styles/globals.css
@@ -53,11 +53,14 @@ body {
 }
 
 .widget-header {
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 800;
   width: 100%;
   text-align: center;
-  margin-top: 0.1rem;
+  margin-top: 0rem;
+  height: 4%;
+  z-index: 999;
+  overflow: visible;
 }
 
 .widget-content {
